added files after debug

--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@nuxt/icon": "^1.2.0",
     "@pinia/nuxt": "^0.5.1",
+    "json-server": "^1.0.0-beta.1",
     "nuxt": "^3.12.4",
     "pinia": "^2.1.7",
     "vue": "latest"
